{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 333,
  "lineage": "ac3226c7-1f8b-7fd9-11b2-2c18a4513e29",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3a9a605b5772be3",
            "domain": "vpc",
            "id": "eipalloc-0d3a9a605b5772be3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-197-55-238.compute-1.amazonaws.com",
            "public_ip": "44.197.55.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:656259396093:instance/i-03f4d49c472fefb97",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f4d49c472fefb97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-tf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02bbb3552dcdbb9b4",
            "private_dns": "ip-10-0-2-13.ec2.internal",
            "private_ip": "10.0.2.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089175d744f4652e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-015373275f5573e95"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dff6f027b6c3b6df",
            "tags": {
              "Name": "api-server"
            },
            "tags_all": {
              "Name": "api-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-015373275f5573e95"
            ]
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_key_pair.web-server-tf",
            "aws_nat_gateway.nat-gw",
            "aws_security_group.api-server-sg",
            "aws_subnet.api-server-sub",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:656259396093:instance/i-09a2899e91c9b23fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a2899e91c9b23fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-tf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f67fee06af4ade18",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-34-207-198-47.compute-1.amazonaws.com",
            "public_ip": "34.207.198.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4b399ab961bd10e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-079a83657fe1af8a1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2f72f74182e6856",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079a83657fe1af8a1"
            ]
          },
          "dependencies": [
            "aws_key_pair.web-server-tf",
            "aws_security_group.web-server-sg",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:internet-gateway/igw-092e7659cf6772d32",
            "id": "igw-092e7659cf6772d32",
            "owner_id": "656259396093",
            "tags": {
              "Name": "igw-poc-vpc"
            },
            "tags_all": {
              "Name": "igw-poc-vpc"
            },
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "dependencies": [
            "aws_vpc.poc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3a9a605b5772be3",
            "connectivity_type": "public",
            "id": "nat-0d09658bbe4f7cbe9",
            "network_interface_id": "eni-01c925941e3b88a47",
            "private_ip": "10.0.1.60",
            "public_ip": "44.197.55.238",
            "subnet_id": "subnet-0b2f72f74182e6856",
            "tags": {
              "Name": "nat-gw"
            },
            "tags_all": {
              "Name": "nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:route-table/rtb-0b5e33879a5974a71",
            "id": "rtb-0b5e33879a5974a71",
            "owner_id": "656259396093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092e7659cf6772d32",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pub"
            },
            "tags_all": {
              "Name": "rt-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.poc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:route-table/rtb-094c0ee0950bdc73c",
            "id": "rtb-094c0ee0950bdc73c",
            "owner_id": "656259396093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d09658bbe4f7cbe9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pvt"
            },
            "tags_all": {
              "Name": "rt-pvt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04db35ef3c6e086f0",
            "route_table_id": "rtb-0b5e33879a5974a71",
            "subnet_id": "subnet-0b2f72f74182e6856"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt-pub",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0859f7dc0f8f2235e",
            "route_table_id": "rtb-094c0ee0950bdc73c",
            "subnet_id": "subnet-0dff6f027b6c3b6df"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rt-pvt",
            "aws_subnet.api-server-sub",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad7a09955a3755e7",
            "route_table_id": "rtb-094c0ee0950bdc73c",
            "subnet_id": "subnet-0a7ea70675b7b758c"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rt-pvt",
            "aws_subnet.rds-db-sub1",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480b4e67955c1b5c",
            "route_table_id": "rtb-094c0ee0950bdc73c",
            "subnet_id": "subnet-000861b1fa91f4b34"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rt-pvt",
            "aws_subnet.rds-db-sub2",
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:security-group/sg-015373275f5573e95",
            "description": "security group for api-server ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015373275f5573e95",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "HTTP from web-server-subnet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "ssh from web-server-subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "api-server-sg",
            "name_prefix": "",
            "owner_id": "656259396093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-server-sg"
            },
            "tags_all": {
              "Name": "api-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.web-server-sub",
            "aws_vpc.poc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:security-group/sg-08e16131430e0aee2",
            "description": "security group for rds-db ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e16131430e0aee2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "mysql traffic from api-server-subnet",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-db-sg",
            "name_prefix": "",
            "owner_id": "656259396093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-db-sg"
            },
            "tags_all": {
              "Name": "rds-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.api-server-sub",
            "aws_vpc.poc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:security-group/sg-079a83657fe1af8a1",
            "description": "security group for web-server ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079a83657fe1af8a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from my-ip",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from my-ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-server-sg",
            "name_prefix": "",
            "owner_id": "656259396093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "api-server-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:subnet/subnet-0dff6f027b6c3b6df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0dff6f027b6c3b6df",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656259396093",
            "tags": {
              "Name": "api-server-sub"
            },
            "tags_all": {
              "Name": "api-server-sub"
            },
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "dependencies": [
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-db-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:subnet/subnet-0a7ea70675b7b758c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a7ea70675b7b758c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656259396093",
            "tags": {
              "Name": "rds-db-sub1"
            },
            "tags_all": {
              "Name": "rds-db-sub1"
            },
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "dependencies": [
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-db-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:subnet/subnet-000861b1fa91f4b34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-000861b1fa91f4b34",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656259396093",
            "tags": {
              "Name": "rds-db-sub2"
            },
            "tags_all": {
              "Name": "rds-db-sub2"
            },
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "dependencies": [
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-server-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:subnet/subnet-0b2f72f74182e6856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b2f72f74182e6856",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656259396093",
            "tags": {
              "Name": "web-server-sub"
            },
            "tags_all": {
              "Name": "web-server-sub"
            },
            "vpc_id": "vpc-05a0cdfe5b7de183e"
          },
          "dependencies": [
            "aws_vpc.poc-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656259396093:vpc/vpc-05a0cdfe5b7de183e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074ba7798a32f07ae",
            "default_route_table_id": "rtb-0a4cd07f662f30e6f",
            "default_security_group_id": "sg-0543dd487b73254b0",
            "dhcp_options_id": "dopt-22795558",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05a0cdfe5b7de183e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a4cd07f662f30e6f",
            "owner_id": "656259396093",
            "tags": {
              "Name": "poc-vpc"
            },
            "tags_all": {
              "Name": "poc-vpc"
            }
          }
        }
      ]
    }
  ]
}